# msktutil

./: .gitignore  .travis.yml  ChangeLog  INSTALL  Makefile.in  README  config.h.in  configure  configure.ac  configure.in  krb5wrap.cpp  krb5wrap.h  ldapconnection.cpp  ldapconnection.h  msktconf.c  msktconf.cpp  msktgmsa.cpp  msktkrb5.c  msktkrb5.cpp  msktldap.c  msktldap.cpp  msktname.c  msktname.cpp  msktname.h  msktpass.c  msktpass.cpp  msktutil.1.in  msktutil.M  msktutil.c  msktutil.cpp  msktutil.h  msktutil.interactive  msktutil.spec  msktutil.spec.in  samba-password-command.sh  strtoll.c  strtoll.h  windows-salt.txt
.github/workflows/: codeql-analysis.yml  linters.yml  msktutil-archs.yml  msktutil-freebsd.yml  msktutil-macos.yml  msktutil-solaris.yml  msktutil.yml
debian/: changelog  control  copyright  cron-daily.sh  postinst  rules
